--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login</title>
+    <title>StudyCity - Login</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -100,7 +100,7 @@
                 <input
                   type="text"
                   name="username"
-                  placeholder="Username..."
+                  placeholder="Username"
                   class="form-control"
                 />
               </div>
@@ -115,7 +115,7 @@
                 <input
                   type="password"
                   name="password"
-                  placeholder="Password..."
+                  placeholder="Password"
                   class="form-control"
                 />
               </div>
