--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login</title>
+    <title>StudyCity - Register</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -111,6 +111,14 @@
                 </div>
                 {{form.password2}}
               </div>
+              <div class="input-group mb-2">
+                <div class="input-group-append">
+                  <span class="input-group-text">
+                    <i class="">Business Account?</i>
+                  </span>
+                </div>
+                {{form.business_account}}
+              </div>
 
               <div class="d-flex justify-content-center mt-3 login_container">
                 <input
@@ -140,10 +148,11 @@
 
       //Query All input fields
       var form_fields = document.getElementsByTagName("input");
-      form_fields[1].placeholder = "Username..";
-      form_fields[2].placeholder = "Email..";
-      form_fields[3].placeholder = "Enter password...";
-      form_fields[4].placeholder = "Re-enter Password...";
+      form_fields[1].placeholder = "Username";
+      form_fields[2].placeholder = "Email";
+      form_fields[3].placeholder = "Enter password";
+      form_fields[4].placeholder = "Re-enter Password";
+      form_fields[5].placeholder = "Account type:";
 
       for (var field in form_fields) {
         form_fields[field].className += " form-control";
