--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -7,25 +7,24 @@
         <img class="rounded-circle account-img" height="200" width="200" src="{{ user.profile.image.url }}">
         <div class="media-body">
             <h2 class="account-heading">{{ user.username }}</h2>
-            <p class="text-secondary">{{ user.email }}</p>
             {% if user.profile.business_account %}
-                <p class="text-secondary">It's a business account</p>
-            {% else %}
-                <p class="text-secondary">It's a user account</p>
+                <p class="text-secondary">Business Account &#10004;&#65039;</p>
             {% endif %}
+            <p class="text-secondary">{{ user.email }}</p>
         </div>
     </div>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Profile Info</legend>
+            <legend class="border-bottom mb-4">Update Profile</legend>
 {#            {% crispy u_form %}#}
             {{ u_form|crispy }}
             {{ p_form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Update</button>
+            <button class="btn btn-outline-info" type="submit">Save Changes</button>
         </div>
     </form>
+    <span><a href="{% url 'user' %}">Exit Profile</a></span>
 </div>
 </html>
