--- a/accounts/templates/accounts/user.html
+++ b/accounts/templates/accounts/user.html
@@ -1,2 +1,4 @@
 <h1>Hello, {{request.user}}. Welcome to StudyCity.</h1>
+<span><a href="{% url 'profile' %}">Profile</a></span>
 <span><a href="{% url 'logout' %}">Logout</a></span>
+
