--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -32,5 +32,6 @@
         </div>
         </form>
         <span><a href="{% url 'user' %}">Exit Profile</a></span>
+        <span><a href="{% url 'index' %}">Search</a></span>
     </div>
 </html>
